# cli-Assistant

./: CMakeLists.txt  README.md  build-lib.bat  build-lib.sh  build-test.bat  build-test.sh  build.bat  build.sh  install.sh
apps/: CMakeLists.txt
apps/client/: main.c
apps/server/: main.cpp
assets/: IDENTITY.md  RULE.md  SUBRULE.md  help.json  help.py  pinchtab_eye.json  pinchtab_eye.py  pinchtab_hand.json  pinchtab_hand.py
assets/help/: help.json
assets/pinchtab_do/: pinchtab_do.json  pinchtab_do.py
assets/pinchtab_peek/: pinchtab_peek.json  pinchtab_peek.py
lib-l/curl/lib/: libcurl.la
lib-l/curl/lib/pkgconfig/: libcurl.pc
lib-l/curl/share/man/man1/: curl.1
lib-l/curl/share/man/man3/: CURLINFO_ACTIVESOCKET.3  CURLINFO_CAPATH.3  CURLINFO_CERTINFO.3  CURLINFO_CONNECT_TIME_T.3  CURLINFO_CONN_ID.3  CURLINFO_CONTENT_LENGTH_DOWNLOAD.3  CURLINFO_CONTENT_TYPE.3  CURLINFO_COOKIELIST.3  CURLINFO_EFFECTIVE_METHOD.3  CURLINFO_EFFECTIVE_URL.3  CURLINFO_HTTP_VERSION.3  CURLINFO_LOCAL_PORT.3  CURLINFO_NAMELOOKUP_TIME.3  CURLINFO_NAMELOOKUP_TIME_T.3  CURLINFO_NUM_CONNECTS.3  CURLINFO_OS_ERRNO.3  CURLINFO_PRIMARY_IP.3  CURLINFO_PROXY_ERROR.3  CURLINFO_REFERER.3  CURLINFO_REQUEST_SIZE.3  CURLINFO_RETRY_AFTER.3  CURLINFO_RTSP_CLIENT_CSEQ.3  CURLINFO_SIZE_DOWNLOAD.3  CURLINFO_SIZE_DOWNLOAD_T.3  CURLINFO_SIZE_UPLOAD.3  CURLINFO_SPEED_DOWNLOAD.3  CURLINFO_SPEED_DOWNLOAD_T.3  CURLINFO_SPEED_UPLOAD.3  CURLINFO_STARTTRANSFER_TIME_T.3  CURLINFO_TLS_SSL_PTR.3  CURLINFO_XFER_ID.3  CURLMOPT_MAX_HOST_CONNECTIONS.3  CURLMOPT_MAX_TOTAL_CONNECTIONS.3  CURLMOPT_PIPELINING_SITE_BL.3  CURLMOPT_PUSHDATA.3  CURLMOPT_SOCKETFUNCTION.3  CURLMOPT_TIMERDATA.3  CURLOPT_ABSTRACT_UNIX_SOCKET.3  CURLOPT_ALTSVC_CTRL.3  CURLOPT_APPEND.3  (+199 more)
lib-l/mbedtls/lib/pkgconfig/: mbedcrypto.pc  mbedx509.pc
lib-w/curl/lib/cmake/CURL/: CURLConfig.cmake  CURLConfigVersion.cmake  CURLTargets-noconfig.cmake  CURLTargets.cmake
lib-w/curl/lib/pkgconfig/: libcurl.pc
lib-w/curl/share/man/man1/: curl-config.1  curl.1  runtests.1  testcurl.1  wcurl.1
lib-w/curl/share/man/man3/: CURLINFO_ACTIVESOCKET.3  CURLINFO_APPCONNECT_TIME.3  CURLINFO_APPCONNECT_TIME_T.3  CURLINFO_CAINFO.3  CURLINFO_CAPATH.3  CURLINFO_CERTINFO.3  CURLINFO_CONDITION_UNMET.3  CURLINFO_CONNECT_TIME.3  CURLINFO_CONNECT_TIME_T.3  CURLINFO_CONN_ID.3  CURLINFO_CONTENT_LENGTH_DOWNLOAD.3  CURLINFO_CONTENT_LENGTH_DOWNLOAD_T.3  CURLINFO_CONTENT_LENGTH_UPLOAD.3  CURLINFO_CONTENT_LENGTH_UPLOAD_T.3  CURLINFO_CONTENT_TYPE.3  CURLINFO_COOKIELIST.3  CURLINFO_EARLYDATA_SENT_T.3  CURLINFO_EFFECTIVE_METHOD.3  CURLINFO_EFFECTIVE_URL.3  CURLINFO_FILETIME.3  CURLINFO_FILETIME_T.3  CURLINFO_FTP_ENTRY_PATH.3  CURLINFO_HEADER_SIZE.3  CURLINFO_HTTPAUTH_AVAIL.3  CURLINFO_HTTPAUTH_USED.3  CURLINFO_HTTP_CONNECTCODE.3  CURLINFO_HTTP_VERSION.3  CURLINFO_LASTSOCKET.3  CURLINFO_LOCAL_IP.3  CURLINFO_LOCAL_PORT.3  CURLINFO_NAMELOOKUP_TIME.3  CURLINFO_NAMELOOKUP_TIME_T.3  CURLINFO_NUM_CONNECTS.3  CURLINFO_OS_ERRNO.3  CURLINFO_POSTTRANSFER_TIME_T.3  CURLINFO_PRETRANSFER_TIME.3  CURLINFO_PRETRANSFER_TIME_T.3  CURLINFO_PRIMARY_IP.3  CURLINFO_PRIMARY_PORT.3  CURLINFO_PRIVATE.3  (+482 more)
lib-w/mbedtls/lib/cmake/MbedTLS/: MbedTLSConfig.cmake  MbedTLSConfigVersion.cmake  MbedTLSTargets-noconfig.cmake  MbedTLSTargets.cmake
lib-w/mbedtls/lib/pkgconfig/: mbedcrypto.pc  mbedtls.pc  mbedx509.pc
lib-w/zlib/include/: zconf.h
lib-w/zlib/lib/cmake/zlib/: ZLIB-shared-noconfig.cmake  ZLIB-shared.cmake  ZLIB-static-noconfig.cmake  ZLIB-static.cmake  ZLIBConfig.cmake  ZLIBConfigVersion.cmake
lib-w/zlib/lib/pkgconfig/: zlib.pc
lib/Lcurl/share/man/man1/: curl-config.1
lib/Lcurl/share/man/man3/: CURLINFO_APPCONNECT_TIME.3  CURLINFO_APPCONNECT_TIME_T.3  CURLINFO_CAINFO.3  CURLINFO_CONDITION_UNMET.3  CURLINFO_CONNECT_TIME.3  CURLINFO_CONTENT_LENGTH_DOWNLOAD_T.3  CURLINFO_CONTENT_LENGTH_UPLOAD.3  CURLINFO_CONTENT_LENGTH_UPLOAD_T.3  CURLINFO_FILETIME.3  CURLINFO_FILETIME_T.3  CURLINFO_FTP_ENTRY_PATH.3  CURLINFO_HEADER_SIZE.3  CURLINFO_HTTPAUTH_AVAIL.3  CURLINFO_HTTP_CONNECTCODE.3  CURLINFO_LASTSOCKET.3  CURLINFO_LOCAL_IP.3  CURLINFO_PRETRANSFER_TIME.3  CURLINFO_PRETRANSFER_TIME_T.3  CURLINFO_PRIMARY_PORT.3  CURLINFO_PRIVATE.3  CURLINFO_PROTOCOL.3  CURLINFO_PROXYAUTH_AVAIL.3  CURLINFO_PROXY_SSL_VERIFYRESULT.3  CURLINFO_QUEUE_TIME_T.3  CURLINFO_REDIRECT_COUNT.3  CURLINFO_REDIRECT_TIME.3  CURLINFO_REDIRECT_TIME_T.3  CURLINFO_REDIRECT_URL.3  CURLINFO_RESPONSE_CODE.3  CURLINFO_RTSP_CSEQ_RECV.3  CURLINFO_RTSP_SERVER_CSEQ.3  CURLINFO_RTSP_SESSION_ID.3  CURLINFO_SCHEME.3  CURLINFO_SIZE_UPLOAD_T.3  CURLINFO_SPEED_UPLOAD_T.3  CURLINFO_SSL_ENGINES.3  CURLINFO_SSL_VERIFYRESULT.3  CURLINFO_STARTTRANSFER_TIME.3  CURLINFO_TLS_SESSION.3  CURLINFO_TOTAL_TIME.3  (+217 more)
lib/Lmbedtls/lib/pkgconfig/: mbedtls.pc
lib/Lzlib/lib/pkgconfig/: zlib.pc
src/: CMakeLists.txt
src/agent/: SYagent.cpp  agent_0.cpp  agent_1.cpp  agent_2.cpp  agent_3.cpp  agent_4.cpp  agent_5.cpp  agent_web.cpp  interact.cpp  sagent.h
src/api/: interface.cpp  sagtapi.h  syagent_interface.h
src/data/: sydata.h
src/local_tool/: cli_tool.cpp  cli_tool.h
src/mannager/: smannager.cpp  smannager.h
src/utils/: utils.cpp  utils.h
src/utils/file/: util_parse_file.cpp  util_parse_file.h
src/utils/json/: utils_json.cpp  utils_json.h
src/utils/main/: utils_1.cpp  utils_1.h
src/utils/net/: util_net.cpp  utils_net.h
src/utils/server/: util_server.cpp  util_server.h
test/: main.cpp  syagent_chat.py  terminal_chat.py
